--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 
 <body>
 
-    <div>
-        <p style="background-color: rgb(11, 128, 160);color: aliceblue;">}
-        Hola        
-        </p>
-    </div>
-
     <header>
 
         <!--// contenedor de mi imagen-->
@@ -42,37 +36,53 @@
 
     <section>
 
-        <div>
-            <div class="paisaje_carretera">
+        <div class=  "card">
+            <div class="card__img">
                 <img src="/Imagenes/imagen3.jpg" alt="Imagen de Paisaje de carrera">
             </div>
-            <div>
-                <h2>Angela Rodriguez</h2>
-                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum vel id et rem officiis cupiditate
+            <div class="card__info">
+                <h2> Angela Rodriguez</h2>
+                <p class="parrafo1"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum vel id et rem officiis cupiditate
                     laboriosam repudiandae ipsum amet explicabo ullam magni tenetur, temporibus necessitatibus quo ex
                     facilis exercitationem. Illo?
+                    <br></br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quaerat quam vitae nihil amet
+                    omnis quibusdam? Beatae dicta necessitatibus, illo, ex nostrum adipisci, illum nihil debitis officia
+                    velit reprehenderit cupiditate.
 
                 </p>
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class=  "card">
+            <div class="card__info">
                 <h2>Experiencia</h2>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quaerat quam vitae nihil amet
+                <p class="parrafo2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quaerat quam vitae nihil amet
+                    omnis quibusdam? Beatae dicta necessitatibus, illo, ex nostrum adipisci, illum nihil debitis officia
+                    velit reprehenderit cupiditate.
+                    <br></br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quaerat quam vitae nihil amet
                     omnis quibusdam? Beatae dicta necessitatibus, illo, ex nostrum adipisci, illum nihil debitis officia
                     velit reprehenderit cupiditate.
                 </p>
-
             </div>
-            <div class ="Equipo_Arin">
+           
+            <div class ="card__img position--right">
                 <img src="/Imagenes/imagen4.jpg" alt="Equipo Laboral Arin 10 años">
             </div>
         </div>
 
     </section>
 
+    <div>
+        <p style="background-color: #0d7a30;color: aliceblue;">
+        Ingrese Información      
+        </p>
+    </div>
+
+    <div class="formulario">
     <form action="">
+    
         <div>
             <label for="">Ingrese su Nombre</label>
             <input type="text"placeholder ="Ej:Juan..."/>
@@ -106,6 +116,7 @@
         </div>
 
     </form>
+    </div>
 
     <footer>
         <div>
