--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/CSS/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Document</title>
 </head>
 
@@ -75,8 +77,7 @@
     </section>
 
     <div>
-        <p style="background-color: #0d7a30;color: aliceblue;">
-        Ingrese Información      
+        <h4> Ingrese Información</h4>
         </p>
     </div>
 
@@ -118,22 +119,26 @@
     </form>
     </div>
 
-    <footer>
-        <div>
-            <h4>Contactos</h4>
+    <div>
+        <h5>CONTACTOS</h5>
+    </div>
+    <footer class="pie_pagina">
+
+        <div class="list1">
             <ul>
-                <li>A</li>
-                <li>B</li>
-                <li>C</li>
+                <li>Quien Soy</li>
+                <li>Experiencia</li>
+                <li>Contactos</li>
+                <li>Test</li>
             </ul>
         </div>
         
-        <div>
-            <img src="/Imagenes/Cel.gif" alt="Contactos Angela Rodriguez" width="200">
+        <div class="img5">
+            <img src="/Imagenes/Cel.gif" alt="Contactos Angela Rodriguez" width="100">
         </div>
 
 
-        <div>
+        <div class="redes">
             <ul>Redes</ul>
                 <li>
                     <a href="https://www.linkedin.com/in/angela-viviana-rodriguez-b34159189/" target="linkIn">
@@ -154,10 +159,14 @@
 
         </div>
 
-        <div>
+        <div class="direction">
+        
         <address>
-            <a href="angela.rod1994@gmail.com"></a><br><br/>
-            <a href=""
+            <i class="fa-sharp fa-solid fa-envelope"></i>
+            <a href="angela.rod1994@gmail.com"></a>
+            <br><br/>
+            <i class="fa-solid fa-phone"></i>
+            <a href="+14155550132">+1 (415) 555‑0132</a>
         </address>
         </div>
 
